# youtube-transcriber-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/cli/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: deps.rs  lib.rs  tools.rs
crates/core/src/downloader/: mod.rs
crates/core/src/output/: mod.rs
crates/core/src/transcriber/: audio.rs  mod.rs  whisper.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: lib.rs  main.rs
crates/gui/src/gui/: mod.rs
crates/gui/src/ui/: main.slint
