[package]
name = "yt-transcriber-cli"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
yt-transcriber-core = { path = "../core" }
clap = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }