[package]
name = "yt-transcriber-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[features]
openmp = ["whisper-rs/openmp"]
metal  = ["whisper-rs/metal"]
coreml = ["whisper-rs/coreml"]
cuda   = ["whisper-rs/cuda"]

[dependencies]
whisper-rs = { workspace = true }
hf-hub     = { workspace = true }
hound      = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
clap       = { workspace = true }
